--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,24 @@
     margin: 0px;
 }
 
+@media screen and (max-width: 600px) {
+    .txtInOut {
+        max-width: 90%;
+    } 
+  }
+
+.centered-container {
+    max-width: 50%;
+    margin: auto;
+}
+
+.txtInOut {
+    height: 60px;
+    width: 500px;
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+
 .header_banana {
     background-color: var(--primary-color);
     margin: 0px 0px 5rem 0px;
@@ -18,19 +36,13 @@
 }
 
 .txt_input {
-    padding: 1rem;
-    width: 50%;
-    height: 5rem;
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-bottom: 1rem;
+    margin-bottom: 0px 0px 1rem 0px;
     font-family: 'Source Sans Pro', sans-serif;
     font-style: italic;
+    text-align: left;
 }
 
 #btn_input {
-    max-width: 50%;
-    margin: auto;
     background-color: var(--primary-color);
     padding: 1.5rem 4rem;
     border: 1ps solid var(--primary-color);
@@ -41,12 +53,11 @@
 }
 
 .output_banana {
-    text-align: center;
     margin-top: 1rem;
 }
 
 .txt_output {
-    border: 1px solid gray;
+    border: 1px solid gray;   
 }
 
 .footer_banana {
@@ -60,6 +71,6 @@
 }
 
 p {
-    max-width: 60%;
+    max-width: 70%;
     margin: auto;
 }
