updated style and API

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@
     font-family: 'Source Sans Pro', sans-serif;
     font-style: italic;
     margin: 0px;
+    background-image: url("https://s1.1zoom.me/big0/728/Despicable_Me_2_Many_438432.jpg");
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 700px) {
@@ -26,6 +30,7 @@
     width: 500px;
     padding: 1rem;
     margin-bottom: 1rem;
+    background-color: white;
 }
 
 .header_banana {
@@ -43,6 +48,7 @@
 }
 
 #btn_input {
+    cursor: pointer;
     background-color: var(--primary-color);
     padding: 1.5rem 4rem;
     border: 1ps solid var(--primary-color);
@@ -54,6 +60,8 @@
 
 .output_banana {
     margin-top: 1rem;
+    color: white;
+    font-weight: bold;
 }
 
 .txt_output {
